welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: identifier expected but string literal found.
var x:String == "A" ;
                ^BDRBuggle:10: error: ';' expected but 'if' found.
  } if (x == "L") {
    ^